Write markup for game

--- a/index.html
+++ b/index.html
@@ -8,6 +8,26 @@
     <title>Odin-Tic-Tac-Toe</title>
 </head>
 <body>
-    
+    <div class="heading"><p>Tic Tac Toe</p></div>
+    <div class="player-names">
+        <input type="text" name="name1" placeholder="Player1" autocomplete="off">
+        <input type="text" name="name2" placeholder="Player2" autocomplete="off">
+        <button>Update Names</button>
+    </div>
+    <div class="player-turn display-none"><p>It's your turn Player1</p></div>
+    <div class="player-winner display-none"><p>Congratulations Player1! You Win!</p></div>
+    <div class="tic-tac-toe">
+        <div class="row1 column1"></div>
+        <div class="row1 column2"></div>
+        <div class="row1 column3"></div>
+        <div class="row2 column1"></div>
+        <div class="row2 column2"></div>
+        <div class="row2 column3"></div>
+        <div class="row3 column1"></div>
+        <div class="row3 column2"></div>
+        <div class="row3 column3"></div>
+    </div>
+    <button class="game-button">Start Game</button>
+    <button class="game-button display-none">New Game</button>
 </body>
 </html>
