Add classes to make buttons selectable

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="row3 column2"></div>
         <div class="row3 column3"></div>
     </div>
-    <button class="game-button">Start Game</button>
-    <button class="game-button display-none">New Game</button>
+    <button class="game-button start-game">Start Game</button>
+    <button class="game-button new-game display-none">New Game</button>
 </body>
 </html>
