Remove player winner

--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
         <input type="text" name="name2" placeholder="Player2" autocomplete="off">
         <button>Update Names</button>
     </div>
-    <div class="player-turn display-none"><p>It's your turn Player1</p></div>
-    <div class="player-winner display-none"><p>Congratulations Player1! You Win!</p></div>
+    <div class="player-turn display-none"><p></p></div>
     <div class="tic-tac-toe">
         <div class="row1 column1"></div>
         <div class="row1 column2"></div>
